// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Throw after bot selected hand renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhUy cvuOTU"
  >
    <div
      class="sc-AxgMl jXNZVy"
    >
      <div
        class="sc-AxjAm boSjhZ"
      >
        <img
          alt="paper"
          class="sc-AxirZ hctvIa"
          src="icon-paper.svg"
        />
      </div>
      <p
        class="sc-AxhCb irvhNx"
      >
        you picked
      </p>
    </div>
    <div
      class="sc-AxgMl jXNZVy"
    >
      <div
        class="sc-AxjAm blSnYx"
      >
        <img
          alt="scissors"
          class="sc-AxirZ hctvIa"
          src="icon-scissors.svg"
        />
      </div>
      <p
        class="sc-AxhCb irvhNx"
      >
        the house picked
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Throw before bot selected hand renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhUy cvuOTU"
  >
    <div
      class="sc-AxgMl jXNZVy"
    >
      <div
        class="sc-AxjAm boSjhZ"
      >
        <img
          alt="paper"
          class="sc-AxirZ hctvIa"
          src="icon-paper.svg"
        />
      </div>
      <p
        class="sc-AxhCb irvhNx"
      >
        you picked
      </p>
    </div>
    <div
      class="sc-AxgMl jXNZVy"
    >
      <div
        class="sc-AxiKw iMJUuS"
      />
      <p
        class="sc-AxhCb irvhNx"
      >
        the house picked
      </p>
    </div>
  </div>
</DocumentFragment>
`;
